--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "https://kit.fontawesome.com/5e138694b1.js"
             ]
           },
           "configurations": {
